<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/current"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/currentCadence"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="100sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/steps_per_minute"
        android:textSize="30sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/usage_hint"
        android:textSize="16sp" />
    
    <Button
        android:id="@+id/stopButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textColor="#D0D0D0"
        android:textSize="30sp" />

</LinearLayout>